# trs

./: .coveragerc  .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .nens.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.rst  bower.json  buildout.cfg  development.cfg  docker-compose.development.yml  docker-compose.yml  manage.py  monkeypatch_setuptools.py  package-lock.json  package.json  production.cfg  pyproject.toml  requirements.txt  sample_queries.txt  setup.cfg  setup.py  tailwind-input.css
.github/workflows/: main.yml  nens-meta.yml
doc/source/: code.rst  conf.py  index.rst  security.rst
etc/: nginx.conf.in  supervisord.conf.in
requirements/: requirements.in  requirements.txt
src/trs/: admin.py  apps.py  core.py  fix_dateinput.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
trs/: #views.py#  .#views.py  __init__.py  admin.py  apps.py  core.py  forms.py  middleware.py  models.py  productionsettings.py  search_indexes.py  settings.py  signal_handlers.py  testsettings.py  urls.py  views.py  wsgi.py
trs/migrations/: 0001_initial.py  0002_auto_20160901_1519.py  0002_auto__add_project__add_person.py  0003_auto_20160901_1535.py  0003_auto__add_field_person_slug__add_field_person_name__add_field_person_d.py  0004_auto_20170125_1029.py  0004_auto__add_field_person_login_name.py  0005_auto_20170206_2128.py  0005_auto__add_personchange.py  0006_auto_20170206_2226.py  0006_auto__del_field_personchange_week_number__add_field_personchange_week.py  0007_auto_20170209_0327.py  0007_auto__del_field_personchange_year__del_field_personchange_week__add_fi.py  0008_auto__add_field_personchange_person.py  0008_project_software_development.py  0009_auto_20220708_1535.py  0009_auto__add_booking.py  0010_auto_20241216_1859.py  0010_auto__add_workassignment.py  0011_auto__add_budgetassignment.py  0011_remove_project_startup_meeting_done.py  0012_auto__add_field_person_user.py  0012_remove_project_is_accepted.py  0013_auto__add_yearweek__del_field_personchange_year_and_week__add_field_pe.py  0013_remove_person_mpc.py  0014_auto__add_index_yearweek_first_day.py  0015_auto__add_field_project_principal__add_field_project_start__add_field_.py  0016_auto__add_field_budgetassignment_description.py  0017_auto__add_field_project_internal.py  0018_auto__del_field_project_slug__del_field_person_slug.py  0019_auto__add_unique_person_user.py  0020_auto__add_field_person_is_office_management__add_field_person_is_manag.py  0021_auto__add_field_personchange_standard_hourly_tariff.py  0023_auto__add_invoice.py  (+46 more)
(+140 files in other folders)
